--- a/index.html
+++ b/index.html
@@ -39,22 +39,8 @@
         Tailwind. It also includes Prettier and automatic publish to GitHub
         pages using GitHub Actions. Learn more:
       </p>
-
-      <div class="p-4" id="imagenes">
-        <div>
-          <img class="mx-auto" width="320" src="https://source.unsplash.com/collection/881002" alt=""> 
-        </div>
-      </div>
-      <div class="p-4" id="imagenes">
-        <div>
-          <img class="mx-auto" width="320" src="https://source.unsplash.com/collection/881099" alt="">
-        </div>
-      </div>
-      <div class="p-4" id="imagenes">
-        <div>
-          <img class="mx-auto" width="320" src="https://source.unsplash.com/collection/881003" alt="">
-        </div>
-      </div>
+      <button class="p-3">Agregar Imagen</button>
+      <div id="images"></div>
     </div>
   </div>
 
