--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,27 @@
         Tailwind. It also includes Prettier and automatic publish to GitHub
         pages using GitHub Actions. Learn more:
       </p>
-      <button class="p-3">Agregar Imagen</button>
+      <fieldset class="text-center">
+        <p class="p-3">
+          <legend class="mx-auto text-sm text-gray-500">
+            Agrega una nueva imagen al final de la lista
+          </legend>
+        </p>
+        <button
+          type="submit"
+          class="py-2 px-4 bg-blue-200 rounded-md shadow-sm font-medium hover:bg-blue-300 transition duration-700 ease-in-out"
+        >
+          Agregar Imagen
+        </button>
+        <p class="mt-4">
+          <button
+            type="reset"
+            class="py-2 px-4 bg-blue-200 rounded-md shadow-sm font-medium hover:bg-blue-300 transition duration-700 ease-in-out"
+          >
+            Limpiar
+          </button>
+        </p>
+      </fieldset>
       <div id="images"></div>
     </div>
   </div>
